syntax = "proto3";

option go_package = "go-microservices/common/api";

package api;

service OrderService {
    rpc createOrder(CreateOrderRequest) returns (Order) {}
}

message Order {
  string ID = 1;
  string CustomerID = 2;
  string Status = 3;
  repeated Item items = 4;
}

message Item {
  string ID = 1;
  string Name = 2;
  int32  Quantity = 3;
  string PriceID = 4;
}

message ItemWithQuantity {
  string ID = 1;
  int32  Quantity = 2;
}

message CreateOrderRequest {
  string CustomerID = 1;
  repeated ItemWithQuantity Items = 2;
}